Updated projects into gifs.
Added more projects.

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                     <div class="w3-half">
                         <div>
                             <h5>Wordle On Discord</h5>
-                            <img src="https://cdn.discordapp.com/attachments/940842850516598855/949224898704859186/unknown.png" style="max-height:100%; max-width:100%;">
+                            <img src="https://cdn.discordapp.com/attachments/808213206253961216/950524781671907358/wordle.gif" style="max-height:100%; max-width:100%;">
                             <p>Coded a Discord bot in Python that starts a game of Wordle to any user that chooses to interact. Users play a game where they try to guess a 
                                 randomly chosen 5 letter word in 6 tries.
                                 <br><br>
@@ -165,6 +165,15 @@
                             <hr>
                         </div>
 
+                        <div>
+                            <h5>Messenger App</h5>
+                            <img src="https://cdn.discordapp.com/attachments/808213206253961216/950523897508425728/messenger.gif" style="max-height:100%; max-width:100%;">
+                            <p>Project for ICS 32. Created a messenger app that allows users create an account to send messages to each other. Users are connected through a
+                                UCI server and messages are encrypted using PyNaCl. User interface was made using Tkinter.
+                            </p>
+                            <hr>
+                        </div>
+
                     </div>
 
 
@@ -177,6 +186,28 @@
                             </p>
                             <hr>
                         </div>
+
+                        <div>
+                            <h5>Othello AI</h5>
+                            <center>
+                                <img src="https://cdn.discordapp.com/attachments/808213206253961216/950522430508654692/OthelloAI.gif" style="max-height:70%; max-width:70%;">
+                            </center>
+                            <p>Project for ICS 46. Programmed an AI in C++ that plays Othello using a heuristic search technique.
+                            </p>
+                            <hr>
+                        </div>
+
+                        <div>
+                            <h5>Cell Life Simulation</h5>
+                            <center>
+                                <img src="https://cdn.discordapp.com/attachments/808213206253961216/950521650145808395/Simulator.gif" style="max-height:70%; max-width:70%;">
+                            </center>
+                            <p>Project for ICS 31. A simulation where the user can spawn multiple varieties of "balls" or "cells" where they each interact with one another in 
+                                an environment.
+                            </p>
+                            <hr>
+                        </div>
+
                     </div>
                 <!-- End project grid -->
                 </div>
