Updated Resume button

--- a/index.html
+++ b/index.html
@@ -57,19 +57,15 @@
                     </h1>
 
                     <p class="social-media">
+                        <a href="https://drive.google.com/file/d/1VMaBjOcMsdC3jUghvSkJUx8ribEfN62W/view?usp=sharing" 
+                        target="_blank" class="fas fa-file-alt" data-toggle="tooltip" title="Resume"></a>
+                        
                         <a href="https://github.com/sirAvent" 
                         target="_blank" class="fab fa-github" data-toggle="tooltip" title="GitHub"></a>
                         
                         <a href="https://www.linkedin.com/in/avent-chiu" 
                         target="_blank"class="fab fa-linkedin" data-toggle="tooltip" title="LinkedIn"></a>
                     </p>
-                    <br>
-                    <h2>
-                        <a target="_blank"
-                        href="https://drive.google.com/file/d/1VMaBjOcMsdC3jUghvSkJUx8ribEfN62W/view?usp=sharing">
-                            <button class="resume-btn">RESUME</button>
-                        </a>
-                    </h2>
                 </div>
             </div>
 
