Update to deliverable project

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 <img 
                 src="https://cdn.discordapp.com/attachments/808213206253961216/964647852989120523/unknown.png">
                 <p>
-                    A responsive website I created for Hack at UCI. Features a form app that checks for a valid email and has a looping, animated image. I implemented the fully specified REST backend using <b>ReactJS</b> and the <b>postman-echo API</b>.
+                    A responsive single page website. Features a form app that checks for a valid email and has a looping, animated image. I implemented the fully specified REST backend using <b>ReactJS</b> and the <b>postman-echo API</b>.
                     Frontend developed with ReactJS, <b>React Bootstrap</b>, and <b>CSS</b>.
                 </p>
                 <br>
