Updated Project Code BTN

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
         <meta content="width=device-width, initial-scale=1" name="viewport" />
         <title>Avent Chiu</title>
 
+        <!-- Icon -->
+        <link rel="icon" href="https://cdn.discordapp.com/attachments/300774323168215040/988667742221652068/ba.png">
+
         <!-- Google Font -->
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
@@ -104,7 +107,7 @@
                     <br>
                     <a target="_blank"
                     href="https://github.com/sirAvent/wordi">
-                        <button class="project-btn">Github Repo</button>
+                        <button class="project-btn">Source Code</button>
                     </a>
                 </div>
             </div>
@@ -134,7 +137,7 @@
                     <br>
                     <a target="_blank"
                     href="https://github.com/sirAvent/HackUCI-Deliverable">
-                        <button class="project-btn">Github Repo</button>
+                        <button class="project-btn">Source Code</button>
                     </a>
                 </div>
             </div>
@@ -163,7 +166,7 @@
                     <br>
                     <a target="_blank"
                     href="https://github.com/sirAvent/jetpack-piggy">
-                        <button class="project-btn">Github Repo</button>
+                        <button class="project-btn">Source Code</button>
                     </a>
                 </div>
             </div>
@@ -192,7 +195,7 @@
                     <br>
                     <a target="_blank"
                     href="https://github.com/KangRuiYu/car-reels">
-                        <button class="project-btn">Github Repo</button>
+                        <button class="project-btn">Source Code</button>
                     </a>
                 </div>
             </div>
@@ -220,7 +223,7 @@
                     
                     <a target="_blank"
                     href="https://github.com/sirAvent/messenger-ics32">
-                        <button class="project-btn">Github Repo</button>
+                        <button class="project-btn">Source Code</button>
                     </a>
                 </div>
             </div>
